--- a/Docs/Tesi/biblio.bib
+++ b/Docs/Tesi/biblio.bib
@@ -39,11 +39,11 @@ howpublished = {\url{http://docs.jboss.org/weld/reference/1.0.0/en-US/html/}},
       howpublished = {\url{http://martinfowler.com/articles/injection.html}},
 }
 @misc{freemarker,
-      title = "FreeMarker",
+      title = "Free{M}arker",
       howpublished = {\url{http://freemarker.org/}},
 }
 @misc{jldap,
-      title = "JLDAP",
+      title = "{JLDAP}",
       howpublished = {\url{http://www.openldap.org/jldap/}},
 }
 @misc{joda,
@@ -55,19 +55,19 @@ howpublished = {\url{http://docs.jboss.org/weld/reference/1.0.0/en-US/html/}},
       howpublished = {\url{http://www.hibernate.org/}},
 }
 @misc{prime,
-      title = "Prime Faces",
+      title = "Prime {F}aces",
       howpublished = {\url{http://primefaces.org/}},
 }
 @misc{cdi,
-    title = "Specifica di CDI",
+    title = "Specifica di {CDI}",
     howpublished = {\url{http://www.cdi-spec.org/download/}},
 }
 @misc{javaBeans,
-    title = "Specifica di Java Beans",
+    title = "Specifica di {J}ava {B}eans",
     howpublished = {\url{http://www.oracle.com/technetwork/java/javase/documentation/spec-136004.html}},
 }
 @misc{managedBean,
-    title = "Specifica di Managed Bean",
+    title = "Specifica di {M}anaged {B}eans",
     howpublished = {\url{http://jcp.org/aboutJava/communityprocess/final/jsr316/}},
 }
 
