--- a/Docs/Tesi/Introduzione.tex
+++ b/Docs/Tesi/Introduzione.tex
@@ -1,6 +1,13 @@
-L'applicazione Jama si occupa della gestione delle Convenzioni. Una convenzione è un contratto tra un Responsabile Scientifico - tipicamente un docente - ed una azienda per fare ricerca scientifica su un argomento concordato. In particolare, Jama serve a tenere traccia dello stato di tutte le convenzioni presenti e passate all'interno del \textsl{Dipartimento di Ingegneria dell'Informazione}, con una possibile futura estensione ad altri dipartimenti dell'Ateneo.\newline
-Questo capitolo descrive brevemente il contenuto dei prossimi capitoli.\newline
-Per prima cosa si descrive il processo di definizione di una convenzione: i primi contatti tra un docente ed un'azienda, l'approvazione da parte del Consiglio, e tutto ciò che ne consegue; verranno inoltre descritti brevemente i requisiti dell'applicazione, prima di passare alla discussione del lavoro degli autori: com'è fatta l'applicazione, come si usa, e anche qualche nozione sugli strumenti usati per arrivare al risultato finale.
+L'applicazione realizzata si occupa della gestione delle Convenzioni. Una convenzione è un contratto tra un Responsabile Scientifico
+- tipicamente un docente - ed una azienda per fare ricerca scientifica su un argomento concordato.
+In particolare, l'applicativo serve a monitorare lo stato di tutte le convenzioni attive o esaurite all'interno del
+\textsl{Dipartimento di Ingegneria dell'Informazione}, con una possibile futura estensione ad altri dipartimenti dell'Ateneo.\newline
+Per prima cosa si descrive il processo di definizione di una convenzione: i primi contatti tra un docente ed un'azienda,
+l'approvazione da parte del Consiglio, e tutto ciò che ne consegue; 
+vengono quindi descritti brevemente i requisiti dell'applicazione, prima di passare alla discussione del lavoro degli autori:
+una analisi del problema che ha portato alla definizione di casi d'uso e modello di dominio, una ricerca delle tecnologie da utilizzare, la stesura del codice
+e infine un collaudo.
+
 
 \section{Processo di definizione di una Convenzione}
 La descrizione del processo è tratta da un documento ufficiale dell'\textsl{Università degli Studi di Firenze}\footnote{\url{http://www.polobiotec.unifi.it/upload/sub/att_commerciale/att_commerciale.pdf}}. Quella che segue è una descrizione più informale.
@@ -13,15 +20,15 @@ Questo paragrafo descrive il processo di proposizione e di approvazione di una c
 \item
 Il Responsabile Scientifico, insieme al RAS, valuta i costi e stila la Tabella di Ripartizione dei compensi.
 \item Il RAS prepara un documento da discutere nel prossimo Consiglio di Dipartimento, che deciderà se approvare o meno la convenzione.
-\item In caso di approvazione da parte del consiglio, l'UAS procede all'inserimento della stessa in CIA e in Jama.
+\item In caso di approvazione da parte del consiglio, l'UAS procede all'inserimento della stessa in CIA e nell'applicazione.
 \end{enumerate}
 
 \paragraph{Livello Gestionale}
-Il Livello Gestionale descrive alcuni requisiti dell'applicazione.\newline
+Il Livello Gestionale descrive i passaggi fondamentali che intercorrono fra la creazione e la chiusura di una convenzione.\newline
 \begin{enumerate}
-\item Una settimana prima della scadenza di ogni rata della convenzione, Jama provvede ad inviare una mail al Responsabile Scientifico, che dovrà indicare se procedere o meno all'emissione della nota di debito - inviando una mail alla struttura amministrativa adeguata.
-\item In caso il Responsabile Scientifico dia il suo benestare, l'amministrazione emette la nota di debito e la registra su Jama. In caso contrario, l'UAS prevede a modificare la scadenza della rata su Jama.
-\item All'emissione della fattura di una rata, l'Amministrazione provvede a registrarla in Jama.\newline
+\item Una settimana prima della scadenza di ogni rata della convenzione,l'applicativo provvede ad inviare una e-mail al Responsabile Scientifico, che dovrà indicare se procedere o meno all'emissione della nota di debito - inviando una e-mail alla struttura amministrativa adeguata.
+\item In caso il Responsabile Scientifico dia il suo benestare, l'amministrazione emette la nota di debito e la registra sull' applicativo. In caso contrario, l'UAS prevede a modificare la scadenza della rata.
+\item All'emissione della fattura di una rata, l'Amministrazione provvede a registrarla nell'applicativo.\newline
 \end{enumerate}
 
 \section{Requisiti}
