--- a/Docs/Tesi/Deltaspike.tex
+++ b/Docs/Tesi/Deltaspike.tex
@@ -36,7 +36,7 @@ public void deleteContract() {
 }
 \end{lstlisting}
 
-L'ultima cosa da fare è fornire l'Authorizer di un metodo annotato \textsl{@Secures} e \textsl{@DeleteContractsAllowed}:
+L'ultima cosa da fare è fornire all'Authorizer un metodo annotato \textsl{@Secures} e \textsl{@DeleteContractsAllowed}:
 
 \begin{lstlisting}
 
