--- a/Docs/Tesi/introduzione_dietro_le_quinte.tex
+++ b/Docs/Tesi/introduzione_dietro_le_quinte.tex
@@ -1,2 +1,1 @@
-In questo capitolo sono raccolti una serie di problemi incontrati durante la scrittura del codice dell'applicativo. Per ogni problema, dopo una breve introduzione, si descrive la soluzione adottata. Tale descrizione
-cerca di essere sufficientemente generale pur scendendo nei dettagli.
+In questo capitolo sono raccolti una serie di problemi incontrati durante la scrittura del codice dell'applicativo. Per ogni problema, dopo una breve introduzione, si descrive la soluzione adottata.
