--- a/Docs/Tesi/login.tex
+++ b/Docs/Tesi/login.tex
@@ -1,6 +1,6 @@
 
 
-La schermata di login è costituita da un messaggio di benvenuto e da un form in cui inserire le proprie credenziali per poter accedere. I dati inviati dal form vengono processati dal bean \lstinline{UserManager}, che si occupa di eseguire l'autenticazione.\\
+La schermata di login è costituita da un messaggio di benvenuto e da un form in cui inserire le proprie credenziali per poter accedere. I dati inviati vengono processati dal bean \lstinline{UserManager}, che si occupa di eseguire l'autenticazione.\\
 Quando l'utente invia il form viene chiamato il metodo \lstinline{login} dello \lstinline{UserManager}, listato qui di seguito:
 
 \begin{lstlisting}
