--- a/Docs/Tesi/conclusione.tex
+++ b/Docs/Tesi/conclusione.tex
@@ -4,7 +4,7 @@ A partire da tali requisiti, sono stati quindi definiti dei casi d'uso che descr
 Si è poi passati alla fase di progettazione. Il primo passo è stata la decisione delle tecnologie da utilizzare. La scelta è ricaduta su \textsl{Java Platform Enterprise Edition} (o, più brevemente, \textsl{Java EE}),
 una piattaforma standard nello sviluppo di applicazioni \textit{enterprise} (cioè di applicazioni che devono essere usate da imprese o organizzazioni di varia natura, e non da singoli individui).
 Java EE include infatti molti componenti che risultano estremamente utili per risolvere problemi tipici di software di questo tipo, ad esempio \textsl{JPA} (\textsl{Java Persistence API}) per la persistenza dei dati,
-\textsl{CDI} (\textsl{Context and Dependecy Injection}) per collegare la logica applicativa con il livello web tramite una gestione automatica degli oggetti in relazione al contesto in cui vengono utilizzati, e \textsl{JSF} 
+\textsl{CDI} (\textsl{Contexts and Dependency Injection}) per collegare la logica applicativa con il livello web tramite una gestione automatica degli oggetti in relazione al contesto in cui vengono utilizzati, e \textsl{JSF} 
 (\textsl{Java Server Faces}) per lo sviluppo del livello di presentazione. Questi framework sono poi stati affiancati da \textsl{Apache 
 Deltaspike}, che si occupa della gestione della sicurezza, impedendo che alcune funzionalità dell'applicazione  possano essere eseguite se l'utente non possiede i permessi necessari.\\
 Successivamente è stato definito il modello dell'applicazione. In realtà, i modelli definiti sono due: quello di business, che rappresenta le entità che riguardano la logica dell'applicazione, e quello relativo agli utenti,
