--- a/Docs/Tesi/jpa.tex
+++ b/Docs/Tesi/jpa.tex
@@ -1,6 +1,5 @@
 \subsection{Introduzione}
-Le applicazioni di tipo Enterprise necessitano di raccogliere e persistere grandi quantità di informazioni, la soluzione che più si è affermata per risolvere questo problema è il database relazionale. Nell'ambiente Enterprise
-, in particolare per la piattaforma Java, si è sentita l'esigenza di soluzioni che permettessero l'integrazione della piattaforma Java con database di tipo relazionale, in modo naturale. 
+Le applicazioni di tipo Enterprise necessitano di raccogliere e persistere grandi quantità di informazioni, la soluzione che più si è affermata per risolvere questo problema è il database relazionale. Nell'ambiente Enterprise, in particolare per la piattaforma Java, si è sentita l'esigenza di soluzioni che permettessero l'integrazione della piattaforma Java con database di tipo relazionale, in modo naturale. 
 
 \subsection{Mapping fra modello Relazione e a Oggetti}
 In un modello a oggetti,come il modello di dominio di un applicativo Java, le entità che popolano il modello sono Classi. Le relazioni fra le classi del modello sono espresse tramite riferimenti, gli attributi di una classe.
@@ -26,13 +25,13 @@ Di seguito si illustrano alcuni concetti e caratteristiche chiave della specific
 \paragraph{Entity}
 Un' unità che possegga una stato e che possa essere persistita viene detta Entità. Le classi Java possono essere facilmente trasformate in entità semplicemente annotando la classe stessa e alcuni dei suoi attributi, o alternativamente,
 fornendo dei descrittori xml. L'unico
-requisito che la classe deve rispettare è che deve possedere un costruttore senza parametri: questo serve affinché Hibernate (o qualsiasi altro provider) possa ricreare l'oggetto una volta interrogato il database per poi riempire i suoin campi.
+requisito che la classe deve rispettare è che deve possedere un costruttore senza parametri: questo serve affinché Hibernate (o qualsiasi altro provider) possa ricreare l'oggetto una volta interrogato il database per poi riempire i suoi campi.
 Come si può notare, 
-non è possibile rendere persistibile una classe in modo del tutto trasparente, ma di sicuro si può affermare che questo avvenga in modo non intrusivo. Allo stesso modo, sempre usando delle annotazioni o dei file di descrizione xml, 
+non è possibile rendere \textquoteleft persistibile\textquoteright{} una classe in modo del tutto trasparente, ma di sicuro si può affermare che questo avvenga in modo non intrusivo. Allo stesso modo, sempre usando delle annotazioni o dei file di descrizione xml, 
 è possibile mappare le relazioni che sussistono fra le entità del modello.
 
 \paragraph{Entity Manager e Persistence Context}
-Le Entità sono gestite da un Entity Manager. Un entity Manager è in grado di persistere un entità nonché di eliminarla o recuperarla dal database. Ogni Entity Manager è associato ad un Persistence Context. Un Persistence Context è un insieme di
+Le Entità sono gestite da un Entity Manager. Un Entity Manager è in grado di persistere un entità nonché di eliminarla o recuperarla dal database. Ogni Entity Manager è associato ad un Persistence Context. Un Persistence Context è un insieme di
 istanze di entità. Una entità si dice ``managed'' se è contenuta in un Persistence Context. Se un Persistence Context, tramite un Entity Manager, partecipa ad una transazione lo stato delle entità ``managed'' contenuto in memoria
 centrale viene salvato sul database. Le entità non ``managed'' sono chiamate ``detached'' e il loro stato in memoria non viene sincronizzato col database in nessuna transazione. Come è possibile ottenere un Entity Manager? Ci sono vari tipi
 di Entity Manager ognuno dei quali è legato a diverse esigenze applicative. Si è scelto di includere nella presente trattazione solo una sotto-categoria: le Entity Manager di tipo ``Container-Managed''.Questa scelta è dovuta al fatto che
@@ -43,11 +42,11 @@ di dipendenza. Gli Entity Manager di tipo ``Container-Managed'' sono di due tipi
  \item Transaction Scoped\\
  Un Entity Manager di questo tipo è \textsl{stateless}, ovvero lavora con un Persistence Context che viene costruito ogni volta che comincia una transazione (JTA) e termina il proprio ciclo di vita al termine della transazione
  \item Extended\\
-  Un Entity Manager di tipo Extended è usata in coppia con un bean(vedi \ref{cdi}) di tipo \textsl{stateful}. In questo caso l'Entity Manager lavora con un singolo Persistence Context il cui ciclo di vita è legato a quello del bean che potenzialmente sopravvive
+  Un Entity Manager di tipo Extended è usata in coppia con un bean (vedi \ref{cdi}) di tipo \textsl{stateful}. In questo caso l'Entity Manager lavora con un singolo Persistence Context il cui ciclo di vita è legato a quello del bean che potenzialmente sopravvive
   a più di una transazione.
 \end{itemize}
 
-L'uso del corretto tipo di Entity Manager dipende dal contesto: per esempio sarà conveniente usare un'Entity Manager di tipo transaction-scoped nel caso dell' eliminazione di un' entità dal database, mentre è forse più conveniente usare un'Entity
+L'uso del corretto tipo di Entity Manager dipende dal contesto: per esempio sarà conveniente usare un'Entity Manager di tipo transaction-scoped nel caso dell'eliminazione di un' entità dal database, mentre è forse più conveniente usare un'Entity
 Manager di tipo extended per recuperare dal database un oggetto il cui stato viene modificato più volte e salvato solo alla fine della sessione corrente.
 
 
