--- a/Docs/Tesi/Introduzione.tex
+++ b/Docs/Tesi/Introduzione.tex
@@ -13,12 +13,11 @@ e infine un collaudo.
 La descrizione del processo è tratta da un documento ufficiale dell'\textsl{Università degli Studi di Firenze}\footnote{\url{http://www.polobiotec.unifi.it/upload/sub/att_commerciale/att_commerciale.pdf}}. Quella che segue è una descrizione più informale.
 
 \paragraph{Livello Politico Decisionale}
-Questo paragrafo descrive il processo di proposizione e di approvazione di una convenzione.\newline
+Questo paragrafo descrive il processo di approvazione di una convenzione.\newline
 
 \begin{enumerate}
 \item Il Responsabile Scientifico prende contatto con un'azienda per accordarsi sui termini dell'eventuale convenzione che li legherà.
-\item
-Il Responsabile Scientifico, insieme al RAS, valuta i costi e stila la Tabella di Ripartizione dei compensi.
+\item Il Responsabile Scientifico, insieme al RAS, valuta i costi e stila la Tabella di Ripartizione dei compensi.
 \item Il RAS prepara un documento da discutere nel prossimo Consiglio di Dipartimento, che deciderà se approvare o meno la convenzione.
 \item In caso di approvazione da parte del consiglio, l'UAS procede all'inserimento della stessa in CIA e nell'applicazione.
 \end{enumerate}
@@ -27,14 +26,13 @@ Il Responsabile Scientifico, insieme al RAS, valuta i costi e stila la Tabella d
 Il Livello Gestionale descrive i passaggi fondamentali che intercorrono fra la creazione e la chiusura di una convenzione.\newline
 \begin{enumerate}
 \item Una settimana prima della scadenza di ogni rata della convenzione,l'applicativo provvede ad inviare una e-mail al Responsabile Scientifico, che dovrà indicare se procedere o meno all'emissione della nota di debito - inviando una e-mail alla struttura amministrativa adeguata.
-\item In caso il Responsabile Scientifico dia il suo benestare, l'amministrazione emette la nota di debito e la registra sull'applicativo. In caso contrario, l'UAS prevede a modificare la scadenza della rata.
+\item Nel caso in cui il Responsabile Scientifico dia la sua approvazione , l'amministrazione emette la nota di debito e la registra sull'applicativo. In caso contrario, l'UAS provvede a modificare la scadenza della rata.
 \item All'emissione della fattura di una rata, l'Amministrazione provvede a registrarla nell'applicativo.\newline
 \end{enumerate}
 
 \section{Requisiti}
 L'obiettivo principale dell'applicativo è la gestione delle convenzioni, tuttavia deve anche occuparsi di \textsl{Contributi}: un contributo si differenzia da una convenzione per il fatto che non è ammessa ripartizione al personale, non c'è fattura ma solo ricevuta, non c'è IVA e la tassazione di Ateneo ha aliquote diverse.\newline
-L'applicazione deve inoltre prevedere la possibilità di definire utenti, ciascuno con un ruolo assegnato, in modo che ogni utente abbia accesso ad un sottoinsieme specifico di azioni. Entrando un po' più in dettaglio l'applicativo deve
-consentire di:
+L'applicazione deve inoltre prevedere la possibilità di definire utenti, ciascuno con un ruolo assegnato, in modo che ogni utente abbia accesso ad un sottoinsieme specifico di azioni. Entrando un po' più in dettaglio l'applicativo deve consentire di:
 
 \begin{itemize}
 \item inserire convenzioni e contributi
