--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -1,4 +1,4 @@
-\documentclass[italian,laurea,twoside,10pt]{UFtesi}
+\documentclass[italian,laurea,oneside,10pt]{UFtesi}
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
 \usepackage{graphicx}
