--- a/Docs/Tesi/casi_uso.tex
+++ b/Docs/Tesi/casi_uso.tex
@@ -20,10 +20,10 @@ Si racchiudono nella figura dell'Utente generico i casi d'uso che sono comuni a 
     l' Utente Generico inserisce i propri dati personali ma commette un errore, quindi clicca su ``Login". Viene visualizzato un messaggio nel quale si avvisa l'utente dell'errore commesso.
     
  \item Visualizzazione del profilo\\ \label{UC_view_profile}
-    Dopo aver effettuato il login , l'Utente Generico clicca sul pulsante ``Profilo" nella toolbar in alto; si presenta una schermata contente i dati personali dell'Utente.
+    Dopo aver effettuato il login, l'Utente Generico clicca sul pulsante ``Profilo" nella toolbar in alto; si presenta una schermata contente i dati personali dell'Utente.
  \item Modifica dell'indirizzo e-mail\\ \label{UC_edit_email}
   Percorso base:
-  dopo aver effettuato il login , l'Utente Generico clicca sul pulsante ``Profilo" nella toolbar in alto; si presenta una schermata contente i dati personali dell'Utente.
+  dopo aver effettuato il login, l'Utente Generico clicca sul pulsante ``Profilo" nella toolbar in alto; si presenta una schermata contente i dati personali dell'Utente.
   L'Utente cambia il proprio indirizzo e-mail. Una volta effettuate le modifiche desiderate l'Utente clicca su ``Salva". Le modifiche vengono salvate e viene visualizzata la schermata precedente.\\
   
   Percorso alternativo:
@@ -72,18 +72,18 @@ Una rappresentazione grafica dei casi d'uso dell'Operatore è disponibile in fig
 	\item La data di scadenza
       \end{itemize}
       
-      Nota : i campi riguardanti l'Iva non sono presenti nel caso del contributo.
+      Nota: i campi riguardanti l'Iva non sono presenti nel caso del contributo.
       
     \item Inserimento della tabella di ripartizione\\
      
       Questa scheda contiene le voci della tabella di ripartizione. L'Operatore può modificare alcuni valori percentuali 
-      in base ai quali dividere l'importo totale. Le voci non modificabili sono calcolate in relazione ai campi modificabili facendo riferimento alle norme di ateneo. Le voci modificabili sono:
+      in base ai quali dividere l'importo totale. Le voci non modificabili sono calcolate in relazione ai campi modificabili facendo riferimento alle norme di Ateneo. Le voci modificabili sono:
       \begin{itemize}
-	\item Personale: stabilisce la quota destinata al personale; è l'unico campo principale che l'operatore può modificare e in base al quale vengono calcolati gli altri.
+	\item Personale: stabilisce la quota destinata al personale; è l'unico campo principale che l'Operatore può modificare e in base al quale vengono calcolati gli altri.
 	\item Missioni, Materiale di consumo, etc. sono sotto-campi di Beni e Servizi e servono per meglio specificare come verrà ripartita la quota destinata a ``Beni e Servizi".
       \end{itemize}
       
-      Nota : questa scheda è assente nel caso del contributo, non essendo prevista una ripartizione.
+      Nota: questa scheda è assente nel caso del contributo, non essendo prevista una ripartizione.
     \item Gestione delle rate\\
       
       Questo passo della procedura è facoltativo: viene data la possibilità all'operatore di inserire delle rate per la convenzione/contributo
@@ -100,7 +100,7 @@ Una rappresentazione grafica dei casi d'uso dell'Operatore è disponibile in fig
   \end{enumerate}
 		 
   Percorso alternativo 1:
-  Durante uno qualsiasi dei passi, l'Operatore  clicca sul tasto ``Annulla", che comporta, a seguito di una conferma, il ritorno alla schermata precedente
+  durante uno qualsiasi dei passi, l'Operatore  clicca sul tasto ``Annulla", che comporta, a seguito di una conferma, il ritorno alla schermata precedente
   senza che la convenzione/contributo venga inserita o i cambiamenti effettuati salvati.
   
   Percorso alternativo 2:
@@ -116,7 +116,7 @@ Una rappresentazione grafica dei casi d'uso dell'Operatore è disponibile in fig
   L'Operatore può selezionare una convenzione e, mediante gli appositi pulsanti che appaiono sulla sinistra, modificare, visualizzare o eliminare una convenzione. Per i dettagli si rimanda casi d'uso relativi a tali operazioni.\\	
 
   Percorso alternativo:
-  L'Operatore clicca sul tasto ``Home", si torna alla pagina iniziale.
+  l'Operatore clicca sul tasto ``Home", si torna alla pagina iniziale.
  
   \item Modifica di una convenzione/contributo\\ \label{UC_edit_contract}
   
@@ -176,7 +176,7 @@ ognuna corrispondente ad un passo della procedura. E' possibile passare da una s
     \item Note
     \end{itemize}
     
-   Nota : i campi riguardanti l'Iva non sono presenti nel caso del contributo.
+   Nota: i campi riguardanti l'Iva non sono presenti nel caso del contributo.
 
    
   \item Inserimento della tabella di ripartizione\\
@@ -209,7 +209,7 @@ con la differenza che i campi non sono modificabili. E' possibile tornare alla s
 \item Eliminazione di una rata\\ \label{UC_delete_installment}
 
 Raggiunta la scheda ``rate" relativa alla convenzione/contributo di interesse, l'Operatore, dopo aver selezionato la rata di interesse, clicca sul pulsante ``Elimina'; appare una finestra di dialogo che chiede di confermare
-l'eliminazione, l'Operatore clicca "Sì"la rata viene eliminata e si torna alla schermata precedente.
+l'eliminazione; l'Operatore clicca \textquotedblleft Sì", la rata viene eliminata e si torna alla schermata precedente.
 
 \item Inserimento di una Ditta\\ \label{UC_new_company}
 Percorso base:
@@ -258,8 +258,8 @@ l'Operatore clicca su ``Salva" avendo inserito un codice fiscale di una ditta gi
   
 \item Visualizzazione dello Scadenzario\\ \label{UC_view_deadlines}
   Percorso base:
-  l'Operatore dalla pagina iniziale clicca sul pulsante ``Visualizza scadenzario", Viene presentata una schermata contente un elenco di contratti che hanno delle rate con scadenze attive. E' possibile filtrare i risultati in base a vari
-  criteri di ricerca. Selezionando una convenzione/contributo e cliccando sul pulsante ``Visualizza" che compare sulla destra è possibile visualizzare una convenzione/contributo, per i dettagli su questa operazione si rimanda a \ref{UC_view_contract}
+  l'Operatore dalla pagina iniziale clicca sul pulsante ``Visualizza scadenzario". Viene presentata una schermata contente un elenco di contratti che hanno delle rate con scadenze attive. È possibile filtrare i risultati in base a vari
+  criteri di ricerca. Selezionando una convenzione/contributo e cliccando sul pulsante ``Visualizza" che compare sulla destra è possibile visualizzare una convenzione/contributo. Per i dettagli su questa operazione si rimanda a \ref{UC_view_contract}
 
 \end{enumerate}
 
@@ -279,7 +279,7 @@ I casi d'uso del Docente sono rappresentati in figura \ref{use_case_diag_teacher
  
  Il docente, dopo aver effettuato il login, può cliccare sul pulsante ``Visualizzazione della lista delle convenzioni/contributi"; la schermata
  che viene visualizzata contiene una tabella che elenca le convenzioni/contributi del docente. E' possibile filtrare le convenzioni/contributi
- secondo vari criteri(data, tipo, scadenze più vicine, ...).Inoltre è possibile visualizzare i dettagli di una convenzione/contributo cliccando sul
+ secondo vari criteri (data, tipo, scadenze più vicine ...). Inoltre è possibile visualizzare i dettagli di una convenzione/contributo cliccando sul
  pulsante ``Visualizza" che appare posizionando il puntatore su una riga della tabella.
  
  \item Visualizzazione di una convenzione/contributo di cui il docente è responsabile scientifico\\ \label{UC_view_own_contract}
@@ -287,7 +287,7 @@ I casi d'uso del Docente sono rappresentati in figura \ref{use_case_diag_teacher
  Il docente dalla schermata ``Visualizzazione delle convenzioni/contributi" può cliccare sul pulsante ``Visualizza" relativo ad una convenzione/contributo; compare una schermata suddivisa in schede analoga a quella della modifica/creazione
  della convenzione. Il docente può navigare fra le schede cliccandoci sopra. Non è permessa nessuna modifica ai dati della convenzione/contributo, tuttavia il docente può gestire gli allegati dalla scheda ``Allegati", per i dettagli
  si rimanda a \ref{UC_manage_attachments}. Cliccando su ``Salva"
- gli allegati inseriti dal docente vengono memorizzati, al contrario cliccando su ``Indietro" le modifiche vegono scartate.
+ gli allegati inseriti dal docente vengono memorizzati, al contrario cliccando su ``Indietro" le modifiche vengono scartate.
  
  \item Gestione allegati\\ \label{UC_manage_attachments}
   
@@ -367,14 +367,13 @@ I casi d'uso del Tempo sono rappresentati in figura \ref{use_case_diag_teacher}
  
  \item Notifica della creazione di una nuova convenzione/contributo\\ \label{UC_notify_new_contract}
  
-    Al momento del completamento della creazione di una nuova convenzione/contributo viene inviata una e-mail all'indirizzo di posta elettronico del responsabile scientifico indicato per la convenzione/contributo. Tale e-mail contiene
+    Al momento del completamento della creazione di una nuova convenzione/contributo viene inviata una e-mail all'indirizzo di posta elettronica del responsabile scientifico indicato per la convenzione/contributo. Tale e-mail contiene
     le informazioni principali che caratterizzano la convenzione/contributo.
   
   
  \item Notifica della chiusura di una convenzione/contributo\\ \label{UC_notify_closed_contract}
  
-    Al momento della chiusura di una convenzione/contributo (ovvero quando il fatturato è pari all'importo totale) viene inviata una e-mail all'indirizzo di posta elettronico del responsabile scientifico che notifica la chiusura della
-    convenzione/contributo riportando alcuni dati di questa.
+    Al momento della chiusura di una convenzione/contributo (ovvero quando il fatturato è pari all'importo totale) viene inviata, all'indirizzo di posta elettronica del responsabile scientifico, una e-mail che notifica la chiusura della convenzione/contributo, riportando alcuni dati della stessa.
 \end{enumerate}
 
 
