--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -2,7 +2,7 @@ agrCongr=Inserimento {0} completato! Per confermare cliccare su Salva.
 close=Chiudi
 available_actions=Azioni Disponibili
 logout=Logout
-instCongr=Congratulazioni\! Hai completato l'inserimento della rata
+instCongr=Inserimento rata completato! Per confermare cliccare su Salva.
 home=Home
 attachments_list_title=Allegati inseriti\: 
 add_attachments=Aggiungi
@@ -28,6 +28,7 @@ yes=S\u00EC
 no=No
 from=Da
 to=A
+currencySym=\u20AC
 
 
 data_Tab=Dati
@@ -102,6 +103,7 @@ shareTableInvMaterials=Materiale inventariabile
 shareTableRentals=Noleggi
 shareTableContrPersonnel=Personale a contratto
 shareTableOtherCosts=Altri costi
+shareTableInvolvedPersonnel=Personale coinvolto
 
 shareTableGoodsValues=Quote di "Beni e servizi"
 
@@ -188,9 +190,10 @@ profile=Profilo
 create_agreement=Crea una convenzione
 create_funding=Crea un contributo
 view_contracts=Visualizza i contratti
+viewEdit_contracts=Visualizza e modifica i contratti
 view_deadlines=Visualizza lo scadenzario
 create_user=Aggiungi un utente
-view_users=Visualizza l'elenco degli utenti
+view_users=Visualizza e modifica gli utenti
 personalData=Dati personali
 
 userWiz_header=Creazione di un utente
@@ -198,7 +201,7 @@ userProfile_header=Dati Personali
 changePassword_header=Cambia la tua password
 changePassword_button=Cambia password
 
-view_companyList=Visualizza elenco ditte
+view_companyList=Visualizza e modifica le ditte
 businessName=Ragione sociale
 legalResidence=Sede legale
 socialNumber=Codice fiscale
