--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -167,6 +167,7 @@ err_sendingMail=E' avvenuto un errore durante l'invio dell' email di notifica
 
 err_duplicateSocialNumber= Codice fiscale già esistente
 
+err_badImport=Impossibile trovare un utente con la data matricola
 
 info_badLogin=Matricola o password errati
 info_badLogin_detail=Matricola o password errati: inserire i valori corretti
