--- a/Docs/Slides/Slides.tex
+++ b/Docs/Slides/Slides.tex
@@ -28,11 +28,13 @@
     \textsc{Università degli Studi di Firenze}
     \vskip1ex
     \scriptsize{\textsc{Dipartimento di Sistemi e Informatica} }\\
-    \scriptsize{\textsc{Tesi di Laurea Specialistica in Ingegneria Informatica } }
+    \scriptsize{\textsc{Tesi di Laurea Triennale in Ingegneria Informatica } }
     \vskip4ex
     \begin{beamerboxesrounded}[lower=lowercolor, shadow=true]{}
      \begin{center}
-    \normalsize{Progettazione e sviluppo di un motore di Fault Tree Analysis \\per il monitoraggio adattivo di sistemi concorrenti Markoviani}
+    \normalsize{Analisi e sviluppo di una web application \\
+		basata sui framework JPA, JSF, CDI, \\
+		per l'amministrazione di attività di trasferimento tecnologico\\}
      \end{center}
     \end{beamerboxesrounded}
 
@@ -41,11 +43,11 @@
 \begin{columns}[t]
 \begin{column}{0.4\textwidth}
 \begin{flushright}
-%\vskip -2em
-      \begin{minipage}[t]{15ex}
+\vskip -2em
+      \begin{minipage}[t]{20ex}
 	\raggedright
-	\emph{Candidato}\\
-	Fulvio Patara
+	\emph{Candidati:}\\
+	Tommaso Levato\\ Alessio Sarullo\\ Giulio Galvan
       \end{minipage}
 \end{flushright}
 \end{column}
@@ -75,7 +77,9 @@
   \end{center}
 }
 
-\title[Monitoraggio adattivo di sistemi concorrenti Markoviani]{Progettazione e sviluppo di un motore di Fault Tree Analysis per il monitoraggio adattivo di sistemi concorrenti Markoviani}
+\title[Analisi e sviluppo di una web application]{Analisi e sviluppo di una web application \\
+basata sui framework JPA, JSF, CDI, \\
+per l'amministrazione di attività di trasferimento tecnologico\\}
 \author{Tommaso Levato, Alessio Sarullo, Giulio Galvan}
 
 \date{\today}
