--- a/Docs/Slides/Slides.tex
+++ b/Docs/Slides/Slides.tex
@@ -93,14 +93,15 @@ per l'amministrazione di attività di trasferimento tecnologico\\}
 \begin{document}
 
 \frame{\titlepage}
-
-
+\input{part1}
+\input{part2}
+\input{part3}
 %\section[Outline]{}
 %\frame{\tableofcontents}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section*{}
+%\section*{}
 %\frame{\titlepage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
