--- a/Docs/Slides/Slides.tex
+++ b/Docs/Slides/Slides.tex
@@ -71,7 +71,7 @@
       Anno Accademico 2012/2013
 \vskip 0.3em
 \begin{itemize}
-\item \structure{Obiettivo}: \\Sperimentazione di politiche di adattamento del tasso di campionamento\\ di una rete di sensori distribuita per la riduzione del consumo energetico mediante analisi predittiva di affidabilità di un sistema critico
+\item \structure{Obiettivo}: \\Sviluppo di una applicazione web per la gestione delle convenzioni
 \end{itemize}
     \end{footnotesize}
   \end{center}
