--- a/Docs/Slides/part1.tex
+++ b/Docs/Slides/part1.tex
@@ -59,6 +59,31 @@ Una convenzione attraversa le seguenti fasi :\\
   \end{frame}
 
   \subsection{Casi d'Uso}
+  \begin{frame}{Casi d'uso dell'Operatore}
+    \begin{figure}[h]
+    \label{use_case_diag_operator}
+    \centering
+    \includegraphics[height=0.8\textheight, width=0.7\textwidth]{images/casi_uso_operatore.eps}
+    \end{figure}
+  \end{frame}
+  
+  \begin{frame}{Casi d'uso del Docente}
+    \begin{figure}[h]
+      \label{use_case_diag_teacher}
+      \centering
+      \includegraphics[width=0.8\textwidth]{images/casi_uso_docente.eps}
+    \end{figure}
+  \end{frame}
+  
+  \begin{frame}{Casi d'uso del Tempo}
+    \begin{figure}[h]
+      \label{use_case_diag_time}
+      \centering
+      \includegraphics[width = 0.5\textwidth]{images/casi_uso_tempo.eps}
+    \end{figure}
+  \end{frame}
+
+
   
   \subsection{Modello di Business}
 
