--- a/Docs/Slides/Slides.tex
+++ b/Docs/Slides/Slides.tex
@@ -7,6 +7,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage{multirow}
 
+\graphicspath{ {./images/} }
+
 \usecolortheme[named=MidnightBlue]{structure}
 
 %Warsaw Dresden Singapore Copenhagen Madrid AnnArbor
